--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,10 +26,17 @@ Metrics/MethodLength:
 Lint/AmbiguousBlockAssociation:
   Exclude:
     - spec/**/*
+Rails/FilePath:
+  Exclude:
+    - spec/**/*
 
 Style/Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
 Rails/HasAndBelongsToMany:
+  Enabled: false
+RSpec/MultipleExpectations:
+  Enabled: false
+RSpec/ExampleLength:
   Enabled: false
